[package]
name = "termpdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
glob = "0.3.1"
image = "0.24.6"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
open_in_editor = "0.2.0"
pdfium-render = "0.8.5"
spawn-editor = "0.0.5"
termion = "2.0.1"
